--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -5940,6 +5940,14 @@ body {
   line-height: 40px;
   border-radius: 50%; }
 
+.navbar-nav > li > .dropdown-menu {
+  width: 100%; }
+
+.dropdown-item {
+  color: #17212A;
+  margin-bottom: 10px;
+  display: block; }
+
 .navbar-primary {
   background: #FFFFFF;
   border-bottom: solid 2px #E8ECEF; }
@@ -5953,6 +5961,12 @@ body {
     color: #506270;
     font-weight: 300;
     border-right: solid 1px #E8ECEF; }
+    .navbar-primary .nav-link:hover {
+      color: #53B6EB; }
+    .navbar-primary .nav-link:active, .navbar-primary .nav-link:focus {
+      color: #1673BC; }
+    .navbar-primary .nav-link:hover, .navbar-primary .nav-link:active, .navbar-primary .nav-link:focus {
+      background: linear-gradient(#fff, #EBEFF1); }
 
 .navbar-secondary {
   background: #FFFFFF;
@@ -6349,6 +6363,12 @@ legend {
   .btn-outline:hover, .btn-outline:active {
     color: #fff; }
 
+.btn-white {
+  background: #fff;
+  color: #1673BC; }
+  .btn-white:hover, .btn-white:active {
+    color: #1673BC; }
+
 .btn-outline-grey {
   border: solid 1px #AEB9BF;
   background: none; }
@@ -6359,9 +6379,32 @@ legend {
   text-decoration: none;
   background: #FFFFFF;
   box-shadow: 0 2px 2px 0 rgba(18, 25, 34, 0.22); }
+  .card:hover .card__img__hover {
+    display: block;
+    display: flex; }
   .card__title {
     color: #506270;
     font-size: 20px; }
+  .card__img {
+    position: relative; }
+    .card__img__hover {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 220px;
+      z-index: 2;
+      background: rgba(22, 114, 188, 0.84); }
+    .card__img__text {
+      position: absolute;
+      top: 185px;
+      right: 30px;
+      z-index: 3; }
+      .card__img__text .ionicons {
+        font-size: 1.5em;
+        margin-left: 15px;
+        margin-top: -3px; }
   .card__file {
     background-color: #EFF2F3;
     background-size: cover;
@@ -6788,6 +6831,39 @@ legend {
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.index {
+  padding-top: 20px;
+  background: #1673BC url("../images/home-sun.png") center 350px no-repeat; }
+  .index__navbar .navbar-brand {
+    font-size: 24px;
+    color: #FFFFFF;
+    letter-spacing: 4.9px; }
+  .index__navbar .nav-link {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #B7E0FF; }
+    .index__navbar .nav-link:hover {
+      background: #1673BC; }
+  .index__navbar .btn {
+    padding: 10px;
+    margin-top: 10px;
+    margin-right: 20px;
+    width: 90px; }
+  .index h1 {
+    color: #fff;
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 55px;
+    font-family: "Roboto Condensed", "Helvetica", "sans-serif"; }
+  .index__main-image {
+    text-align: center; }
+  .index__banner {
+    display: flex;
+    justify-content: center;
+    background: #182A36;
+    padding: 40px 0;
+    text-align: center; }
+
 /*
 ==============================================
 CSS3 ANIMATION CHEAT SHEET
